--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Riyadh</h1>
 
     <!-- SUB HEAD -->
-    <div id="content">	    <h2>Where A Traditional Past Meets A Modern Future.</h2>
+      <h2>Where A Traditional Past Meets A Modern Future.</h2>
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->	
     </div>	
   </div>	    <div id="content">
