--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- SUB HEAD -->
       <h2>Where A Traditional Past Meets A Modern Future.</h2>
      
-    </div>	
-  </div>	    <div id="content">
-</body>	      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+
+    <div id="content">
+      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
       <img src="./images/garden.jpg" alt="Riyadh Garden" />
        <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh" />
